correçao inicial de atendimento tecnico

--- a/Infraero.Relprev.WebUi/Views/AtendimentoTecnico/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtendimentoTecnico/Index.cshtml
@@ -108,22 +108,22 @@
                             </div>
 
                             <div class="radio-custom">
-                                <input type="radio" id="rdoTodos" name="rdoStatus" value="@EnumStatusRelato.NaoIniciado.GetHashCode()">
+                                <input type="radio" id="rdoTodos" name="rdoStatus" value="@EnumStatusRelato.NaoIniciado">
                                 <label for="radioExample2">Não iniciados</label>
                             </div>
 
                             <div class="radio-custom">
-                                <input type="radio" id="rdoTecnico" name="rdoStatus" value="@EnumStatusRelato.AguardandoParecerTecnico.GetHashCode()">
+                                <input type="radio" id="rdoTecnico" name="rdoStatus" value="@EnumStatusRelato.AguardandoParecerTecnico">
                                 <label for="radioExample3">Aguardando Parecer</label>
                             </div>
 
                             <div class="radio-custom">
-                                <input type="radio" id="rdoComplemento" name="rdoStatus" value="@EnumStatusRelato.AguardandoComplemento.GetHashCode()">
+                                <input type="radio" id="rdoComplemento" name="rdoStatus" value="@EnumStatusRelato.AguardandoComplemento">
                                 <label for="radioExample4">Aguardando Complemento</label>
                             </div>
 
                             <div class="radio-custom">
-                                <input type="radio" id="rdoResposta" name="rdoStatus" value="@EnumStatusRelato.AguardandoResposta.GetHashCode()">
+                                <input type="radio" id="rdoResposta" name="rdoStatus" value="@EnumStatusRelato.AguardandoResposta">
                                 <label for="radioExample5">Aguardando resposta</label>
                             </div>
 
