--- a/Infraero.Relprev.WebUi/Views/AtendimentoTecnico/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtendimentoTecnico/Index.cshtml
@@ -41,7 +41,7 @@
                                     <i class="fa fa-calendar"></i>
                                 </span>
 
-                                <input id="DtStart" name="DtStart"
+                                <input id="DtOcorrenciaInicio" name="DtOcorrenciaInicio"
                                        title="Por favor informe a data início da ocorrência."
                                        style="z-index: auto;"
                                        data-plugin-datepicker data-date-format="dd/mm/yyyy" data-plugin-options='{"language": "pt-BR"}'
