--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
@@ -122,7 +122,7 @@
     <script src="~/js/usuario.js"></script>
     <script>
         (function ($) {
-            $('#ddlEmpresa').val(@Model.ResponsavelTecnico.CodEmpresa);
+            $('#ddlEmpresa').val();
             $('#ddlEmpresa').trigger('change');
             $('#ddlUnidadeInfraestrutura').val(@Model.ResponsavelTecnico.CodUnidadeInfraestrutura);
             $('#ddlUnidadeInfraestrutura').trigger('change');
