--- a/Infraero.Relprev.WebUi/Views/Empresa/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Empresa/Index.cshtml
@@ -49,6 +49,7 @@
                                                     data-container="body"
                                                     data-placement="top"
                                                     title="Lista de Unidades Vinculadas"
+                                                    data-trigger="focus" 
                                                     data-html="true"
                                                     data-content="@Html.DisplayFor(modelItem => item.NomUnidadeInfraestrutura)">
                                                 <i class="fa fa-eye"></i> Ver todos
