--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
@@ -119,7 +119,7 @@
     <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/select2/js/select2.js"></script>
     <script src="~/vendor/jquery-mask/jquery.mask.js"></script>
-    <script src="~/js/usuario.js"></script>
+    <script src="~/js/responsavel.js"></script>
     <script>
         (function ($) {
             $('#ddlEmpresa').val();
