--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Index.cshtml
@@ -1,10 +1,21 @@
 ﻿@model Infraero.Relprev.Application.ResponsavelTecnico.Queries.GetResponsavelTecnicos.GridResponsavelTecnico
+@using System.Security.Claims
+@using Infraero.Relprev.Infrastructure.Identity
+@using Infraero.Relprev.WebUi.Services
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@{
+    var userRole = ((ClaimsIdentity)User.Identity).FindFirst(ClaimTypes.Role).Value;
 
+    var requirement = new UserInRoleRequirement(userRole);
+
+}
 <div class="row">
     <div class="col-lg-12">
         <form id="form1" class="form-horizontal">
@@ -36,7 +47,10 @@
                                 <th class="text-center">E-mail</th>
                                 <th class="text-center">Empresa</th>
                                 <th class="text-center">Telefone</th>
-                                <th class="text-center">Ações</th>
+                                @if ((await AuthorizationService.AuthorizeAsync(User, new string[] { UserRoles.Administrator, UserRoles.GestorSgsoSite }, requirement)).Succeeded)
+                                {
+                                    <th class="text-center">Ações</th>
+                                }
                             </tr>
                         </thead>
                         <tbody>
@@ -48,10 +62,13 @@
                                     <td>@Html.DisplayFor(modelItem => item.EndEmail)</td>
                                     <td>@Html.DisplayFor(modelItem => item.DscEmpresa)</td>
                                     <td>@Html.DisplayFor(modelItem => item.NumTelefone)</td>
-                                    <td class="actions">
-                                        <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="ResponsavelTecnico" asp-route-id="@item.CodResponsavelTecnico" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
-                                        <a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="ResponsavelTecnico" asp-route-id="@item.CodResponsavelTecnico" class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
-                                    </td>
+                                    @if ((await AuthorizationService.AuthorizeAsync(User, new string[] { UserRoles.Administrator, UserRoles.GestorSgsoSite }, requirement)).Succeeded)
+                                    {
+                                        <td class="actions">
+                                            <a data-toggle="tooltip" data-placement="top" title="Editar" asp-action="Edit" asp-controller="ResponsavelTecnico" asp-route-id="@item.CodResponsavelTecnico" class="on-default edit-row" style='color: #eea236'><i class="fa fa-pencil"></i></a>
+                                            <a data-toggle="tooltip" data-placement="top" title="Excluir" asp-action="Delete" asp-controller="ResponsavelTecnico" asp-route-id="@item.CodResponsavelTecnico" class="on-default remove-row" style='color: #d43f3a'><i class="fa fa-trash-o"></i></a>
+                                        </td>
+                                    }
                                 </tr>
                             }
                         </tbody>
@@ -103,7 +120,7 @@
                 }
 
         }).apply(this, [jQuery]);
-        
+
     </script>
 }
 
