--- a/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
@@ -144,15 +144,22 @@
                                     title="Por favor selecione o local da ocorrência." required
                                     asp-for="CodLocal"
                                     asp-items="Model.ListLocal">
+                                @if (Model.ListLocal.Count() > 0)
+                                {
                                     <option value="">Selecione o local</option>
+                                }
+                                else
+                                {
+                                    <option value="">Nenhum local encontrado nessa unidade de infraestrutura</option>
+                                }
                             </select>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Sub local da ocorrência <span class="required">*</span></label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Sub local da ocorrência </label>
                         <div class="col-lg-9">
                             <select class="form-control populate select2" name="ddlSubLocal" id="ddlSubLocal"
-                                    title="Por favor selecione o sub local da ocorrência." required
+                                    title="Por favor selecione o sub local da ocorrência."
                                     asp-for="CodSubLocal"
                                     asp-items="Model.ListSubLocal">
                                     <option value="">Selecione o sub local</option>
@@ -163,18 +170,25 @@
                         <label class="col-sm-3 control-label text-sm-right pt-2">Assunto <span class="required">*</span></label>
                         <div class="col-lg-9">
                             <select class="form-control populate select2" name="ddlAssunto" id="ddlAssunto"
-                                    title="Por favor selecione o sub local da ocorrência." required
+                                    title="Por favor selecione o assunto da ocorrência." required
                                     asp-for="CodAssunto"
                                     asp-items="Model.ListAssunto">
+                                @if (Model.ListAssunto.Count() > 0)
+                                {
                                     <option value="">Selecione o assunto</option>
+                                }
+                                else
+                                {
+                                    <option value="">Nenhum assunto encontrado nesse unidade de infraestrutura</option>
+                                }
                             </select>
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-sm-3 control-label text-sm-right pt-2">Sub assunto <span class="required">*</span></label>
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Sub assunto </label>
                         <div class="col-lg-9">
                             <select class="form-control populate select2" name="ddlSubAssunto" id="ddlSubAssunto"
-                                    title="Por favor selecione o sub assunto da ocorrência." required
+                                    title="Por favor selecione o sub assunto da ocorrência." 
                                     asp-for="CodSubAssunto"
                                     asp-items="Model.ListSubAssunto">
                                     <option value="">Selecione o sub assunto</option>
