--- a/Infraero.Relprev.WebUi/Views/Relato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Index.cshtml
@@ -45,7 +45,10 @@
                                         {
                                             <a data-toggle="tooltip" data-placement="top" title="Classificar" asp-action="Edit" asp-controller="Relato" asp-route-id="@item.CodRelato" class="on-default edit-row" style='color: #47A447'><i class="fa fa-sort-alpha-asc"></i></a>
                                         }
+                                        @if (item.FlgStatusRelato == (int)EnumStatusRelato.Ocorrenciaclassificada)
+                                        {
                                             <a data-toggle="tooltip" data-placement="top" title="Atribuir" asp-action="Index" asp-controller="AtribuirRespRelato" asp-route-id="@item.CodRelato" class="on-default edit-row" style='color: #0088CC'><i class="fa fa-plug"></i></a>
+                                        }
                                         <a data-toggle="tooltip" data-placement="top" title="Cancelar" asp-action="Cancel" asp-controller="Relato" asp-route-id="@item.CodRelato" class="on-default edit-row" style='color: #d43f3a'><i class="fa fa-times-circle-o"></i></a>
                                         <a data-toggle="tooltip" data-placement="top" title="Finalizar" asp-action="Finalize" asp-controller="Relato" asp-route-id="@item.CodRelato" class="on-default remove-row" style='color: #191C21'><i class="fa fa-check-square-o"></i></a>
                                     </td>
