--- a/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Infraero.Relprev.Application.ConfigurarAmbiente.Queries.GetConfigurarAmbientes.ConfigurarAmbienteDto
+﻿@model Infraero.Relprev.CrossCutting.Models.ConfigurarAmbiente
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,7 +6,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "ConfigurarAmbiente", FormMethod.Post))
+        @using (@Html.BeginForm("Edit", "ConfigurarAmbiente", FormMethod.Post))
         {
             <section class="card">
                 <header class="card-header">
@@ -15,7 +15,7 @@
                         <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
                     </div>
 
-                    <h2 class="card-title">Cadastrar Configuração do Ambiente</h2>
+                    <h2 class="card-title">Alterr Configuração do Ambiente</h2>
 
                 </header>
                 <div class="card-body">
@@ -29,20 +29,20 @@
                     <div class="form-group row">
                         <label class="col-lg-3 control-label text-lg-right pt-2">Parecer Técnico</label>
                         <div class="col-lg-3">
-                            <input type="text" id="ParecerTecnico" name="ParecerTecnico" class="form-control" 
+                            <input type="text" id="ParecerTecnico" name="ParecerTecnico" class="form-control" value="@Model.QtdParecerTecnico"
                                    placeholder="eg.: Tempo que o técnico deve ter para responder um parecer técnico" maxlength="3" />
                         </div>
 
                         <label class="col-lg-2 control-label text-lg-right pt-2">Devolvido para Complemento<span class="required">*</span></label>
                         <div class="col-lg-3 pull-left">
-                            <input type="text" id="DevolvidoParaComplemento" name="DevolvidoParaComplemento" class="form-control" 
+                            <input type="text" id="DevolvidoParaComplemento" name="DevolvidoParaComplemento" class="form-control" value="@Model.QtdDevolvidoParaComplemento"
                                    placeholder="eg.: Tempo de resposta do parecer técnico quando o mesmo é rejeitado e devolvido para complemento" maxlength="3" />
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-lg-3 control-label text-lg-right pt-2">Tempo de Notificação (e-mail) para Responder Parecer Técnico<span class="required">*</span></label>
                         <div class="col-lg-3">
-                            <input type="text" id="TempoNotificacaoParaResponder" name="TempoNotificacaoParaResponder" class="form-control" 
+                            <input type="text" id="TempoNotificacaoParaResponder" name="TempoNotificacaoParaResponder" class="form-control" value="@Model.QtdTempoNotificacaoParaResponder"
                                    placeholder="eg.: Tempo em que dever ser notificado por e-mail as Respostas dos Pareceres Técnicos " maxlength="3" />
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                         <label class="col-sm-3 control-label text-sm-right pt-2">Texto Descritivo para Motivo de Cancelamento <span class="required">*</span></label>
                         <div class="col-sm-9">
                             <textarea type="text" rows="3" id="TextoMotivoCancelamento" name="TextoMotivoCancelamento" class="form-control"
-                                      placeholder="eg.: Texto descritivo a ser inserido no e-mail de notificação em caso de cancelamento do relato" required maxlength="1000"></textarea>
+                                      placeholder="eg.: Texto descritivo a ser inserido no e-mail de notificação em caso de cancelamento do relato" required maxlength="1000">@Model.DscMotivoCancelamento</textarea>
                         </div>
                     </div>
                 </div>
