Retornando a empresa atraves do vinculo resposável empresa

--- a/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
@@ -201,7 +201,7 @@
                         <div class="col-sm-9">
                             <button class="btn  btn-success pull-left mr-2">Salvar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
                             <a href="@Url.Action("Index", "Relato")" class="btn btn-danger pull-left mr-2">Cancelar Relato&nbsp;&nbsp;<i class="fa fa-remove"></i></a>
-                            <a href="@Url.Action("Index", "AtribuirRespRelato", new { id = Model.Relato.CodRelato })" class="btn btn-warning pull-left mr-2">Atribuir Responsável&nbsp;&nbsp;<i class="fa fa-plug"></i></a>
+                           @* <a href="@Url.Action("Index", "AtribuirRespRelato", new { id = Model.Relato.CodRelato })" class="btn btn-warning pull-left mr-2">Atribuir Responsável&nbsp;&nbsp;<i class="fa fa-plug"></i></a>*@
                             @*<a href="@Url.Action("Index", "Relato")" class="btn btn-dark pull-left">Voltar &nbsp;&nbsp;<i class="fa fa-reply"></i></a>*@
 
                         </div>
