--- a/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtribuirRespRelato/Index.cshtml
@@ -199,7 +199,7 @@
                                 @foreach (var item in Model.ListResponsavelTecnico)
                                 {
                                     <tr>
-                                        <td>@*@Html.DisplayFor(modelItem => item.ResponsavelTecnico.Empresa.NomRazaoSocial)*@@*@item.ResponsavelTecnico.CodEmpresa*@</td>
+                                        <td>@Html.DisplayFor(modelItem => item.ResponsavelTecnico.DscEmpresa)@*@item.ResponsavelTecnico.CodEmpresa*@</td>
                                         <td>@Html.DisplayFor(modelItem => item.ResponsavelTecnico.NomResponsavelTecnico)</td>
                                         <td class="actions">
                                             <a data-toggle="tooltip" data-placement="top" title="Remover" asp-action="Delete" asp-controller="AtribuirRespRelato"
