--- a/Infraero.Relprev.WebUi/Views/Parecer/Complete.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Parecer/Complete.cshtml
@@ -29,8 +29,8 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
-                                <input type="hidden" id="CodRelato" name="CodRelato" value="@Model.Relato.CodRelato">
-                                <input type="hidden" id="CodParecer" name="CodParecer" value="@Model.Parecer.CodParecer">
+                                @*<input type="hidden" id="CodRelato" name="CodRelato" value="@Model.Relato.CodRelato">
+                                <input type="hidden" id="CodParecer" name="CodParecer" value="@Model.Parecer.CodParecer">*@
                                 <input readonly id="CodNumRelato" name="CodNumRelato" value="@Model.Relato.NumRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="12" />
 
                             </div>
