--- a/Infraero.Relprev.WebUi/Views/Relato/Finalize.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Finalize.cshtml
@@ -127,10 +127,10 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Sub Assunto<span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <input readonly id="DsSubAssunto" name="DsSubAssunto"
-                                   placeholder="eg.: Sub Assunto da ocorrência"
+                            <input readonly id="DsAssunto" name="DsAssunto"
+                                   placeholder="eg.: Assunto da ocorrência"
                                    class="form-control"
-                                   value="@Model.Relato.SubAssunto.DscSubAssunto">
+                                   value="@Model.Relato.Assunto.DscAssunto">
                         </div>
                     </div>
                     <br />
