--- a/Infraero.Relprev.WebUi/Views/Shared/_Layout.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Shared/_Layout.cshtml
@@ -226,14 +226,14 @@
                                     </li>
                                 }
                                 @*@if ((await AuthorizationService.AuthorizeAsync(User, new string[] { UserRoles.Administrator, UserRoles.GestorSgsoSite }, requirement)).Succeeded)
-                                {
-                                    <li>
-                                        <a class="nav-link" href="@Url.Action("Index", "AtribuirRespRelato")">
-                                            <i class="fa fa-plug" aria-hidden="true"></i>
-                                            <span>Atribuir <br />Responsável/Relato</span>
-                                        </a>
-                                    </li>
-                                }*@
+                                    {
+                                        <li>
+                                            <a class="nav-link" href="@Url.Action("Index", "AtribuirRespRelato")">
+                                                <i class="fa fa-plug" aria-hidden="true"></i>
+                                                <span>Atribuir <br />Responsável/Relato</span>
+                                            </a>
+                                        </li>
+                                    }*@
                                 @if ((await AuthorizationService.AuthorizeAsync(User, new string[] { UserRoles.Administrator, UserRoles.GestorSgsoSite }, requirement)).Succeeded)
                                 {
                                     <li>
@@ -245,29 +245,30 @@
                                 }
                                 @if ((await AuthorizationService.AuthorizeAsync(User, new string[] { UserRoles.Administrator, UserRoles.GestorSgsoSite }, requirement)).Succeeded)
                                 {
-                                    <li class="nav-parent nav-expanded">
+                                    <li class="nav-parent nav-expanded" id="parecer">
                                         <a class="nav-link" href="#">
                                             <i class="fa fa-file-text-o" aria-hidden="true"></i>
                                             <span>Parecer Técnico</span>
                                         </a>
                                         <ul class="nav nav-children">
                                             <li>
-                                                <a class="nav-link" href="@Url.Action("Complete", "Parecer")">
+                                                <a class="nav-link" v-on:click="CompleteParecer">
                                                     Complementar
                                                 </a>
                                             </li>
                                             <li>
-                                                <a class="nav-link" href="@Url.Action("Evaluate", "Parecer")">
+                                                <a class="nav-link" v-on:click="EvaluateParecer">
                                                     Avaliar
                                                 </a>
                                             </li>
                                             <li>
-                                                <a class="nav-link" href="@Url.Action("Reply", "Parecer")">
+                                                <a class="nav-link" v-on:click="ReplyParecer">
                                                     Responder
                                                 </a>
                                             </li>
                                         </ul>
                                     </li>
+
                                 }
                                 @if ((await AuthorizationService.AuthorizeAsync(User, new string[] { UserRoles.Administrator, UserRoles.GestorSgsoSite }, requirement)).Succeeded)
                                 {
@@ -339,7 +340,7 @@
         </div>
 
     </section>
-
+    @Html.Partial("_ModalNumRelatoPartial")
     <!-- Vendor -->
     <script src="~/vendor/jquery/jquery.js"></script>
     <script src="~/vendor/jquery-browser-mobile/jquery.browser.mobile.js"></script>
@@ -358,14 +359,14 @@
     <!-- Theme Base, Components and Settings -->
     <script src="~/js/theme.js"></script>
 
-    <!-- Theme Custom -->
-    <script src="~/js/custom.js"></script>
-
     <!-- Theme Initialization Files -->
     <script src="~/js/theme.init.js"></script>
     <script src="~/vendor/vue/vue.js"></script>
     <script src="~/vendor/axios/axios.min.js"></script>
     <script src="~/js/main.js"></script>
+
+    <!-- Theme Custom -->
+    <script src="~/js/custom.js"></script>
 
     <!-- Specific Page Vendor -->
     @RenderSection("ScriptsSpecificVendor", required: false)
