inicio de nova versao para o postgresql

--- a/Infraero.Relprev.WebUi/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Infraero.Relprev.WebUi/Areas/Identity/Pages/Account/Login.cshtml
@@ -24,7 +24,7 @@
                     <div class="form-group mb-3">
                         <label>Usuário</label>
                         <div class="input-group input-group-icon">
-                            <input asp-for="Login.Email" type="text" class="form-control form-control-lg"  value="ntitsolutions01@gmail.com"/>
+                            <input asp-for="Login.Email" type="text" class="form-control form-control-lg"  value="fabrica@binnovation.co"/>
                             <span class="input-group-addon">
                                 <span class="icon icon-lg">
                                     <i class="fa fa-user"></i>
