--- a/Infraero.Relprev.WebUi/Views/Shared/_Layout.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Shared/_Layout.cshtml
@@ -12,8 +12,8 @@
     <title>@ViewData["Title"]</title>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
     <meta name="keywords" content="Infraero" />
-    <meta name="description" content="Infraero Relprev">
-    <meta name="author" content="Binnovation - NtitSolutions">
+    <meta name="description" content="Relprev - Cadastro de relato de prevenção">
+    <meta name="author" content="NtitSolutions|Binnovation">
 
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
