--- a/Infraero.Relprev.WebUi/Views/Shared/_LayoutSingIn.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Shared/_LayoutSingIn.cshtml
@@ -6,9 +6,9 @@
     <!-- Basic -->
     <meta charset="UTF-8">
 
-    <meta name="keywords" content="HTML5 Admin Template" />
-    <meta name="description" content="Porto Admin - Responsive HTML5 Template">
-    <meta name="author" content="okler.net">
+    <meta name="keywords" content="Infraero" />
+    <meta name="description" content="Relprev - Cadastro de relato de prevenção">
+    <meta name="author" content="NtitSolutions|Binnovation">
 
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
