--- a/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Create.cshtml
@@ -6,64 +6,64 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Create", "ConfigurarAmbiente", FormMethod.Post))
+        @using (@Html.BeginForm("Create", "ConfigurarAmbiente", FormMethod.Post, new { id = "form" }))
         {
-        <section class="card">
-            <header class="card-header">
-                <div class="card-actions">
-                    <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
-                    <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
-                </div>
-
-                <h2 class="card-title">Alterr Configuração do Ambiente</h2>
-
-            </header>
-            <div class="card-body">
-                <div class="form-group row">
-                    <label class="col-sm-3 control-label text-sm-right pt-2"></label>
-                    <div class="col-sm-9">
-                        <h4 class="pt-3 mb-0">Tempo de resposta (em dias)</h4>
-
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-3 control-label text-lg-right pt-2">Parecer Técnico</label>
-                    <div class="col-lg-3">
-                        <input type="text" id="ParecerTecnico" name="ParecerTecnico" class="form-control" 
-                               placeholder="eg.: Tempo que o técnico deve ter para responder um parecer técnico" maxlength="3" />
+            <section class="card">
+                <header class="card-header">
+                    <div class="card-actions">
+                        <a href="#" class="card-action card-action-toggle" data-card-toggle></a>
+                        <a href="#" class="card-action card-action-dismiss" data-card-dismiss></a>
                     </div>
 
-                    <label class="col-lg-2 control-label text-lg-right pt-2">Devolvido para Complemento<span class="required">*</span></label>
-                    <div class="col-lg-3 pull-left">
-                        <input type="text" id="DevolvidoParaComplemento" name="DevolvidoParaComplemento" class="form-control" 
-                               placeholder="eg.: Tempo de resposta do parecer técnico quando o mesmo é rejeitado e devolvido para complemento" maxlength="3" />
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-3 control-label text-lg-right pt-2">Tempo de Notificação (e-mail) para Responder Parecer Técnico<span class="required">*</span></label>
-                    <div class="col-lg-3">
-                        <input type="text" id="TempoNotificacaoParaResponder" name="TempoNotificacaoParaResponder" class="form-control" 
-                               placeholder="eg.: Tempo em que dever ser notificado por e-mail as Respostas dos Pareceres Técnicos " maxlength="3" />
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-sm-3 control-label text-sm-right pt-2">Texto Descritivo para Motivo de Cancelamento <span class="required">*</span></label>
-                    <div class="col-sm-9">
-                        <textarea type="text" rows="3" id="TextoMotivoCancelamento" name="TextoMotivoCancelamento" class="form-control"
-                                  placeholder="eg.: Texto descritivo a ser inserido no e-mail de notificação em caso de cancelamento do relato" required maxlength="1000"></textarea>
-                    </div>
-                </div>
-            </div>
-            <footer class="card-footer">
-                <div class="row justify-content-end">
-                    <div class="col-sm-9">
-                        <button data-toggle="tooltip" data-placement="bottom" title="Armazena os dados da configuração no sistema RealPrev" class="btn  btn-success pull-left mr-2">Salvar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
-                        <button type="reset" class="btn btn-danger pull-left mr-2">Cancelar &nbsp;&nbsp;<i class="fa fa-remove"></i></button>
+                    <h2 class="card-title">Alterr Configuração do Ambiente</h2>
 
+                </header>
+                <div class="card-body">
+                    <div class="form-group row">
+                        <label class="col-sm-3 control-label text-sm-right pt-2"></label>
+                        <div class="col-sm-9">
+                            <h4 class="pt-3 mb-0">Tempo de resposta (em dias)</h4>
+
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-lg-3 control-label text-lg-right pt-2">Parecer Técnicooo<span class="required">*</span></label>
+                        <div class="col-lg-3">
+                            <input type="text" id="ParecerTecnico" name="ParecerTecnico" class="form-control"
+                                   placeholder="eg.: Tempo que o técnico deve ter para responder um parecer técnico" maxlength="3" />
+                        </div>
+
+                        <label class="col-lg-2 control-label text-lg-right pt-2">Devolvido para Complemento<span class="required">*</span></label>
+                        <div class="col-lg-3 pull-left">
+                            <input type="text" id="DevolvidoParaComplemento" name="DevolvidoParaComplemento" class="form-control"
+                                   placeholder="eg.: Tempo de resposta do parecer técnico quando o mesmo é rejeitado e devolvido para complemento" maxlength="3" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-lg-3 control-label text-lg-right pt-2">Tempo de Notificação (e-mail) para Responder Parecer Técnico<span class="required">*</span></label>
+                        <div class="col-lg-3">
+                            <input type="text" id="TempoNotificacaoParaResponder" name="TempoNotificacaoParaResponder" class="form-control"
+                                   placeholder="eg.: Tempo em que dever ser notificado por e-mail as Respostas dos Pareceres Técnicos " maxlength="3" />
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label class="col-sm-3 control-label text-sm-right pt-2">Texto Descritivo para Motivo de Cancelamento <span class="required">*</span></label>
+                        <div class="col-sm-9">
+                            <textarea type="text" rows="3" id="TextoMotivoCancelamento" name="TextoMotivoCancelamento" class="form-control"
+                                      placeholder="eg.: Texto descritivo a ser inserido no e-mail de notificação em caso de cancelamento do relato" required maxlength="1000"></textarea>
+                        </div>
                     </div>
                 </div>
-            </footer>
-        </section>
+                <footer class="card-footer">
+                    <div class="row justify-content-end">
+                        <div class="col-sm-9">
+                            <button data-toggle="tooltip" data-placement="bottom" title="Armazena os dados da configuração no sistema RealPrev" class="btn  btn-success pull-left mr-2">Salvar &nbsp;&nbsp;<i class="fa fa-save"></i></button>
+                            <button type="reset" class="btn btn-danger pull-left mr-2">Cancelar &nbsp;&nbsp;<i class="fa fa-remove"></i></button>
+
+                        </div>
+                    </div>
+                </footer>
+            </section>
         }
     </div>
 </div>
@@ -75,10 +75,23 @@
     </style>
 }
 @section Scripts {
+
+    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
+    <script src="~/vendor/jquery-mask/jquery.mask.js"></script>
     <script>
         (function ($) {
 
             'use strict';
+
+
+            var $ParecerTecnico = $("#ParecerTecnico");
+            $ParecerTecnico.mask('000');
+
+            var $DevolvidoParaComplemento = $("#DevolvidoParaComplemento");
+            $DevolvidoParaComplemento.mask('000');
+
+            var $TempoNotificacaoParaResponder = $("#TempoNotificacaoParaResponder");
+            $TempoNotificacaoParaResponder.mask('000');
 
             var crub = @ViewBag.CrudMessage;
 
@@ -101,6 +114,26 @@
                     type: 'error'
                 });
             }
+
+            $("#form").validate({
+
+                highlight: function (label) {
+                    $(label).closest('.form-group').removeClass('has-success').addClass('has-error');
+                },
+                success: function (label) {
+                    $(label).closest('.form-group').removeClass('has-error');
+                    label.remove();
+                },
+                errorPlacement: function (error, element) {
+                    var placement = element.closest('.input-group');
+                    if (!placement.get(0)) {
+                        placement = element;
+                    }
+                    if (error.text() !== '') {
+                        placement.after(error);
+                    }
+                }
+            });
 
         }).apply(this, [jQuery]);
 
