--- a/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ConfigurarAmbiente/Index.cshtml
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                     <div class="form-group row">
-                        <label class="col-lg-3 control-label text-lg-right pt-2">Parecer Técnico</label>
+                        <label class="col-lg-3 control-label text-lg-right pt-2">Parecer Técnico<span class="required">*</span></label>
                         <div class="col-lg-3">
                             <input type="text" id="ParecerTecnico" name="ParecerTecnico" class="form-control" value="@Model.ParecerTecnico"
                                    placeholder="eg.: Tempo que o técnico deve ter para responder um parecer técnico" maxlength="3"
@@ -80,10 +80,21 @@
 }
 @section Scripts {
     <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
+    <script src="~/vendor/jquery-mask/jquery.mask.js"></script>
     <script>
         (function ($) {
 
             'use strict';
+
+
+            var $ParecerTecnico = $("#ParecerTecnico");
+            $ParecerTecnico.mask('000');
+
+            var $DevolvidoParaComplemento = $("#DevolvidoParaComplemento");
+            $DevolvidoParaComplemento.mask('000');
+
+            var $TempoNotificacaoParaResponder = $("#TempoNotificacaoParaResponder");
+            $TempoNotificacaoParaResponder.mask('000');
 
             var crub = @ViewBag.CrudMessage;
 
