--- a/Infraero.Relprev.WebUi/Views/Shared/_Layout.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Shared/_Layout.cshtml
@@ -322,7 +322,7 @@
                     <div class="right-wrapper text-right">
                         <ol class="breadcrumbs">
                             <li>
-                                <a href="index.html">
+                                <a href="@Url.Action("Index", "Home")">
                                     <i class="fa fa-home"></i>
                                 </a>
                             </li>
