--- a/Infraero.Relprev.WebUi/Views/AtendimentoTecnico/Index.cshtml
+++ b/Infraero.Relprev.WebUi/Views/AtendimentoTecnico/Index.cshtml
@@ -29,7 +29,8 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
-                                <input type="text" name="NumRelato" id="NumRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="100" />
+                                <input type="text" name="NumRelato" id="NumRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="100"
+                                       title="Por favor informe Nº do relato." required/>
                             </div>
                         </div>
                     </div>
