--- a/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Edit.cshtml
@@ -99,6 +99,7 @@
                         <div class="col-sm-7">
                             <textarea readonly type="text" rows="3" id="DscOcorrenciaRelator" name="DscOcorrenciaRelator"
                                       class="form-control" placeholder="eg.: Descrição da ocorrência do relato"
+title="Por favor informe a descrição da ocorrência do relato"
                                       v-on:click="NovaDescricao"
                                       required maxlength="1000">@Model.Relato.DscOcorrenciaRelator</textarea>
                         </div>
