--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Create.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Create.cshtml
@@ -151,7 +151,7 @@
         }
 
         var notify = @ViewBag.NotifyMessage;
-        var messagem = @ViewBag.Notify;
+        var messagem = '@ViewBag.Notify';
 
         if (notify===0) {
             new PNotify({
