--- a/Infraero.Relprev.WebUi/Views/Parecer/Reply.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Parecer/Reply.cshtml
@@ -29,9 +29,9 @@
                                 <span class="input-group-addon">
                                     <i class="fa fa-key"></i>
                                 </span>
-                                <input type="hidden" id="CodRelato" name="CodRelato" value="@Model.Relato.CodRelato">
+                                <input type="hidden" id="CodRelato" name="CodRelato"  required title="Por favor informe o Nº do relato">
 
-                                <input readonly id="CodNumRelato" name="CodNumRelato" value="@Model.Relato.NumRelato" class="form-control" placeholder="eg.: Número identificador do relato" maxlength="12" />
+                                <input readonly id="CodNumRelato" name="CodNumRelato"  class="form-control" placeholder="eg.: Número identificador do relato" maxlength="12" />
                             </div>
                         </div>
                     </div>
@@ -40,8 +40,7 @@
                         <div class="col-lg-9">
                             <input readonly id="DscUnidadeInfraestrutura" name="DscUnidadeInfraestrutura"
                                    placeholder="eg.: Unidade Infraestrutura"
-                                   class="form-control"
-                                   value="@Model.Relato.UnidadeInfraestrutura.NomUnidadeÌnfraestrutura">
+                                   class="form-control">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -55,7 +54,7 @@
                                        data-plugin-masked-input data-input-mask="99/99/9999"
                                        placeholder="eg.: Data da ocorrência de prevenção"
                                        class="form-control"
-                                       value="@Model.Relato.DatOcorrencia">
+                                       required title="Por favor informe o Data da ocorrência">
                             </div>
                         </div>
 
@@ -70,7 +69,7 @@
                                        data-plugin-timepicker class="form-control"
                                        data-plugin-options='{ "showMeridian": false }'
                                        placeholder="eg.: Horário da ocorrência"
-                                       value="@Model.Relato.HorOcorrencia">
+                                       required title="Por favor informe o Hora da Ocorrência">
                             </div>
                         </div>
                     </div>
@@ -81,8 +80,10 @@
                                       name="DscLocalOcorrenciaRelator"
                                       class="form-control"
                                       placeholder="eg.: Nome do Local da Ocorrência do relato  "
-                                      required
-                                      maxlength="200">@Model.Relato.DscLocalOcorrenciaRelator</textarea>
+                                       required title="Por favor informe o Local da Ocorrência"
+                                      maxlength="200">
+
+</textarea>
                         </div>
                     </div>
 
@@ -101,8 +102,8 @@
                         <div class="col-sm-9">
                             <input readonly id="DscLocal" name="DscLocal"
                                    placeholder="eg.: Local da ocorrência"
-                                   class="form-control"
-                                   value="@Model.Relato.Local.DscLocal">
+                                   class="form-control" required title="Por favor informe o Local da ocorrência"
+                                   >
                         </div>
                     </div>
                     <div class="form-group row">
@@ -110,8 +111,8 @@
                         <div class="col-sm-9">
                             <input readonly id="DscSubLocal" name="DscSubLocal"
                                    placeholder="eg.: Sub Local da ocorrência"
-                                   class="form-control"
-                                   value="@Model.Relato.SubLocal.DscSubLocal">
+                                   class="form-control" required title="Por favor informe o Sub Local de ocorrência"
+                                   >
                         </div>
                     </div>
                     <div class="form-group row">
@@ -119,8 +120,8 @@
                         <div class="col-sm-9">
                             <input readonly id="DsAssunto" name="DsAssunto"
                                    placeholder="eg.: Assunto da ocorrência"
-                                   class="form-control"
-                                   value="@Model.Relato.Assunto.DscAssunto">
+                                   class="form-control" required title="Por favor informe o Assunto"
+                                   >
                         </div>
                     </div>
                     <div class="form-group row">
@@ -128,8 +129,8 @@
                         <div class="col-sm-9">
                             <input readonly id="DsAssunto" name="DsAssunto"
                                    placeholder="eg.: Assunto da ocorrência"
-                                   class="form-control"
-                                   value="@Model.Relato.Assunto.DscAssunto">
+                                   class="form-control" required title="Por favor informe o Sub Assunto"
+                                   >
                         </div>
                     </div>
                     <br />
@@ -145,25 +146,25 @@
                                         <div class="form-group row">
                                             <label class="col-sm-3 control-label text-sm-right pt-2">Descrição do parecer técnico <span class="required">*</span></label>
                                             <div class="col-sm-9">
-                                                <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do parecer técnico " required maxlength="500"></textarea>
+                                                <textarea type="text" rows="3" name="fullname" required title="Por favor informe o Descrição do parecer técnico" class="form-control" placeholder="eg.: Descrição do parecer técnico " required maxlength="500"></textarea>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-sm-3 control-label text-sm-right pt-2">Motivo da devolução do parecer <span class="required">*</span></label>
                                             <div class="col-sm-9">
-                                                <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do motivo da devolução do parecer técnico" required maxlength="500"></textarea>
+                                                <textarea type="text" rows="3" name="fullname" required title="Por favor informe o Motivo da devolução do parecer" class="form-control" placeholder="eg.: Descrição do motivo da devolução do parecer técnico" required maxlength="500"></textarea>
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-sm-3 control-label text-sm-right pt-2">Responsável técnico<span class="required">*</span></label>
                                             <div class="col-sm-9">
-                                                <input type="text" name="fullname" class="form-control" placeholder="eg.: Nome do responsável técnico do parecer" required maxlength="500" />
+                                                <input type="text" name="fullname" required title="Por favor informe o Responsável técnico" class="form-control" placeholder="eg.: Nome do responsável técnico do parecer" required maxlength="500" />
                                             </div>
                                         </div>
                                         <div class="form-group row">
                                             <label class="col-lg-3 control-label text-lg-right pt-2">Status do parecer<span class="required">*</span></label>
                                             <div class="col-sm-3">
-                                                <input type="text" name="fullname" class="form-control" placeholder="eg.: Status de andamento do parcer técnico" required maxlength="500" />
+                                                <input type="text" name="fullname" required title="Por favor informe o Status do parecer" class="form-control" placeholder="eg.: Status de andamento do parcer técnico" required maxlength="500" />
                                             </div>
 
                                             <label class="col-lg-2 control-label text-lg-right pt-2">Data/Hora  <span class="required">*</span></label>
@@ -172,7 +173,7 @@
                                                     <span class="input-group-addon">
                                                         <i class="fa fa-calendar"></i>
                                                     </span>
-                                                    <input readonly id="date" data-plugin-masked-input data-input-mask="99/99/9999" placeholder="eg.: Data e hora de criação do parecer técnico" class="form-control">
+                                                    <input readonly id="date" required title="Por favor informe o Data/Hora " data-plugin-masked-input data-input-mask="99/99/9999" placeholder="eg.: Data e hora de criação do parecer técnico" class="form-control">
                                                 </div>
                                             </div>
                                         </div>
@@ -185,13 +186,13 @@
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Descrição do relato da Classificação <span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do relato da Classificação" required maxlength="500"></textarea>
+                            <textarea type="text" rows="3" name="fullname" required title="Por favor informe o Descrição do relato da Classificação" class="form-control" placeholder="eg.: Descrição do relato da Classificação" required maxlength="500"></textarea>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-3 control-label text-sm-right pt-2">Descrição do parecer<span class="required">*</span></label>
                         <div class="col-sm-9">
-                            <textarea type="text" rows="3" name="fullname" class="form-control" placeholder="eg.: Descrição do parecer técnico" required maxlength="500"></textarea>
+                            <textarea type="text" rows="3" name="fullname" required title="Por favor informe o Descrição do parecer" class="form-control" placeholder="eg.: Descrição do parecer técnico" required maxlength="500"></textarea>
                         </div>
                     </div>
                     <div class="form-group row">
