--- a/Infraero.Relprev.WebUi/Views/Perfil/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Perfil/Edit.cshtml
@@ -11,7 +11,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        @using (@Html.BeginForm("Edit", "Perfil", FormMethod.Post))
+        @using (@Html.BeginForm("Edit", "Perfil", FormMethod.Post, new { id = "form" }))
         {
             <section class="card">
                 <header class="card-header">
@@ -92,7 +92,6 @@
 }
 @section Scripts {
     <script src="~/vendor/ios7-switch/ios7-switch.js"></script>
-    <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script src="~/vendor/jquery-validation/jquery.validate.js"></script>
     <script>
         (function () {
