--- a/Infraero.Relprev.WebUi/Views/Relato/Finalize.cshtml
+++ b/Infraero.Relprev.WebUi/Views/Relato/Finalize.cshtml
@@ -102,8 +102,7 @@
                         <div class="col-sm-9">
                             <input readonly id="DscLocal" name="DscLocal"
                                    placeholder="eg.: Local da ocorrência"
-                                   class="form-control"
-                                   value="@Model.Relato.Local.DscLocal">
+                                   class="form-control">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -111,8 +110,7 @@
                         <div class="col-sm-9">
                             <input readonly id="DscSubLocal" name="DscSubLocal"
                                    placeholder="eg.: Sub Local da ocorrência"
-                                   class="form-control"
-                                   value="@Model.Relato.SubLocal.DscSubLocal">
+                                   class="form-control">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -120,8 +118,7 @@
                         <div class="col-sm-9">
                             <input readonly id="DsAssunto" name="DsAssunto"
                                    placeholder="eg.: Assunto da ocorrência"
-                                   class="form-control"
-                                   value="@Model.Relato.Assunto.DscAssunto">
+                                   class="form-control">
                         </div>
                     </div>
                     <div class="form-group row">
@@ -129,8 +126,7 @@
                         <div class="col-sm-9">
                             <input readonly id="DsAssunto" name="DsAssunto"
                                    placeholder="eg.: Assunto da ocorrência"
-                                   class="form-control"
-                                   value="@Model.Relato.Assunto.DscAssunto">
+                                   class="form-control">
                         </div>
                     </div>
                     <br />
