--- a/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
+++ b/Infraero.Relprev.WebUi/Views/ResponsavelTecnico/Edit.cshtml
@@ -90,6 +90,7 @@
                         <div class="col-lg-9">
                             <select class="form-control populate select2" name="ddlEmpresa" id="ddlEmpresa"
                                     title="Por favor selecione uma empresa." required
+                                    name="ddlEmpresa[]" multiple="multiple"
                                     asp-for="CodEmpresa" asp-items="Model.ListEmpresa">
                                 <option value="">Selecionar Empresa</option>
                             </select>
